[package]
name = "adaptavist"
version = "0.1.0"
description = "Rust providing functionality for Jira Test Management (tm4j)"
keywords = ["testing", "jira"]
repository = "https://github.com/mirecl/allure"
authors = ["Grazhdankov Andrei <grazhdankov@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]

